# CoreLab

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
animation/: MemoryReadAnimation.cpp  MemoryReadAnimation.h
app/: App.cpp  App.h  MachineController.cpp  MachineController.h  main.cpp
app/animation/: MemoryReadAnimation.cpp  MemoryReadAnimation.h  RegisterLoadAnimation.cpp  RegisterLoadAnimation.h
app/core/: Camera.cpp  Camera.h
app/scene/: Scene.cpp  Scene.h
app/sim/: Cache.cpp  Cache.h  RAM.cpp  RAM.h  simulation.cpp
app/view/: AluView.cpp  AluView.h  BlockView.cpp  BlockView.h  CacheLineView.cpp  CacheLineView.h  CacheView.cpp  CacheView.h  CoreView.cpp  CoreView.h  CpuView.cpp  CpuView.h  PortView.cpp  PortView.h  RamView.cpp  RamView.h  ViewNode.cpp  ViewNode.h
app/view/rails/: ArcRailSegment.cpp  BezierRailSegment.cpp  BezierRailSegment.h  RailBuilder.cpp  RailPath.cpp  StraightRailSegment.cpp  StraightRailSegment.h
core/: Camera.cpp  Camera.h
input/: Controls.cpp  Controls.h
objects/: CacheLine.cpp  CacheLine.h  RAM.cpp  RAM.h
scene/: Scene.cpp  Scene.h
sim/: Math.h  MemoryTransaction.cpp  MemoryTransaction.h  RAM.cpp  RAM.h  simulation.cpp  simulation.h
src/: CacheLine.cpp  CacheLine.h  main.cpp
src/animation/: MemoryReadAnimation.cpp  MemoryReadAnimation.h
src/app/: main.cpp
src/input/: Controls.cpp  Controls.h
src/objects/: CacheLine.cpp  CacheLine.h  RAM.cpp  RAM.h
src/scene/: Scene.cpp  Scene.h
view/: BlockView.h  BusView.cpp  BusView.h  CacheLineView.cpp  CacheLineView.h  CacheView.cpp  CacheView.h  CoreView.cpp  CoreView.h  CpuView.cpp  CpuView.h  RamView.cpp  RamView.h
view/rails/: ArcRailSegment.h  RailBuilder.h  RailPath.h  RailSegment.cpp  RailSegment.h
